banned half done

--- a/style.css
+++ b/style.css
@@ -48,14 +48,36 @@ margin-right: 100px;
     justify-content: space-around;
     height: 100vh;
     align-items: center;
-    border: 2px solid grey ;
+    /* border: 2px solid grey ; */
     color: white;
+    background-image: url('images/background.png'),linear-gradient(45deg,rgb(8, 8, 8),rgb(53, 53, 53));
 
 
 }
-.banner-photo {
+.img {
     width: 300px;
-    height:190px;
+    /* height:240px; */
+}
+.banner-text-title {
+    /* margin: 40px; */
+    font-size: 55px;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.description {
+    margin: 15px 0;
+    font-size: 18px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.button {
+    background-color: red;
+    padding: 20px;
+    color: white;
+    font-size: 20px;
+    border-radius: 10px;
+    margin: 10px 10px;
+
+
 }
 
 
