--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a:hover,.logo:hover {
 }
 .menu-container {
     display: flex;
-    background-color: rgb(32, 32, 32);
+    background-color: rgb(5, 1, 19);
     padding:15px;
     color:white;
     align-items: center;
@@ -50,11 +50,11 @@ margin-right: 100px;
     align-items: center;
     /* border: 2px solid grey ; */
     color: white;
-    background-image: url('images/background.png'),linear-gradient(45deg,rgb(8, 8, 8),rgb(53, 53, 53));
+    background-image: url('images/background.png'),linear-gradient(45deg,rgb(94, 0, 166),rgb(13, 0, 157));
 
 
 }
-.img {
+.banner-img {
     width: 300px;
     /* height:240px; */
 }
@@ -70,15 +70,61 @@ margin-right: 100px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .button {
-    background-color: red;
-    padding: 20px;
-    color: white;
-    font-size: 20px;
+    background-color: rgb(223, 40, 40);
+    padding:10px 20px;
+    border: none;
     border-radius: 10px;
     margin: 10px 10px;
-
-
+    font-size: 20px;
+    color: white;
 }
+.button:hover {
+    background-color: rgb(169, 0, 0);
+}
+.about-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* border: 2px solid grey ; */
+    color: black;
+    flex-direction: row-reverse;
+}
+.abt {
+    text-align: center;
+    font-size: 40px;
+    margin: 30px 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.about-image {
+    width: 300px;
+    margin-left: 100px;
+    
+}
+.about-text-title {
+    font-size: 30px;
+        font-weight: 550;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.about-text-info {
+    margin: 15px 0;
+        font-size: 16px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.about-button {
+    background-color: rgb(223, 40, 40);
+        padding: 10px 20px;
+        border: none;
+        border-radius: 10px;
+        margin: 10px 10px;
+        font-size: 20px;
+        color: white;
+}
+.about-button:hover {
+    background-color: rgb(169, 0, 0);
+}
+
+
+
 
 
 
