--- a/style.css
+++ b/style.css
@@ -122,9 +122,51 @@ margin-right: 100px;
 .about-button:hover {
     background-color: rgb(169, 0, 0);
 }
+.service-container {
+    display:flex;
+    justify-content: space-around;
 
+}
+.svc-title {
+    text-align: center;
+        font-size: 40px;
+        padding-top: 30px;
+        margin: 30px 0;
+        font-family: Verdana;
+        color: grey;
+}
+.box{
+    width:220px;
+    height: 280px;
+    text-align: center;
+    padding: 15px;
+    border-radius: 12px;
+    box-shadow: 4px  4px 15px grey;
+    background-color: black;
+    color: white;
 
+}
+.box-heading {
+    padding: 10px 0;
+    font-size: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-
+}
+.box-description {
+    padding: 10px;
+}
+.box-button {
+    border: none;
+    border-radius: 5px;
+    padding: 8px 12px;
+    margin: 10px;
+    background-color: grey;
+    color: white;
+    font-weight: 600;
+}
+.service-background{
+    background-image: url('images/background.png'), linear-gradient(45deg, rgb(51, 51, 51), rgb(8,8, 8));
+    height: 100vh;
+}
 
 
