--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;
     cursor: pointer;
+    
 }
 a{
     text-decoration: none !important;
@@ -50,7 +51,7 @@ margin-right: 100px;
     align-items: center;
     /* border: 2px solid grey ; */
     color: white;
-    background-image: url('images/background.png'),linear-gradient(45deg,rgb(94, 0, 166),rgb(13, 0, 157));
+    background-image: url('images/background.png'),linear-gradient(45deg, rgb(51, 51, 51), rgb(8, 8, 8));
 
 
 }
@@ -88,6 +89,8 @@ margin-right: 100px;
     /* border: 2px solid grey ; */
     color: black;
     flex-direction: row-reverse;
+    
+    
 }
 .abt {
     text-align: center;
@@ -132,7 +135,7 @@ margin-right: 100px;
         font-size: 40px;
         padding-top: 30px;
         margin: 30px 0;
-        font-family: Verdana;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: grey;
 }
 .box{
