--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ a{
 }
 a:hover,.logo:hover {
     color: rgb(12, 194, 200);
+    /* border-radius: 10px 10px ; */
 }
 .menu-container {
     display: flex;
-    background-color: rgb(5, 1, 19);
+    background-color: rgb(0, 0, 0);
     padding:15px;
     color:white;
     align-items: center;
@@ -50,14 +51,17 @@ margin-right: 100px;
     height: 100vh;
     align-items: center;
     /* border: 2px solid grey ; */
-    color: white;
-    background-image: url('images/background.png'),linear-gradient(45deg, rgb(51, 51, 51), rgb(8, 8, 8));
+
+    background-image: url('images/background.png'),linear-gradient(45deg, rgb(103, 15, 143), rgb(7, 51, 174));
 
 
 }
 .banner-img {
     width: 300px;
     /* height:240px; */
+}
+.banner-text button{
+    text-align: center;
 }
 .banner-text-title {
     /* margin: 40px; */
@@ -75,12 +79,16 @@ margin-right: 100px;
     padding:10px 20px;
     border: none;
     border-radius: 10px;
-    margin: 10px 10px;
+    margin: 10px 80px;
     font-size: 20px;
     color: white;
 }
 .button:hover {
     background-color: rgb(169, 0, 0);
+
+}
+.whole-about,footer{
+    background-image: url('images/background.png'), linear-gradient(135deg, rgb(103, 15, 143), rgb(7, 51, 174));
 }
 .about-container {
     display: flex;
@@ -89,15 +97,16 @@ margin-right: 100px;
     /* border: 2px solid grey ; */
     color: black;
     flex-direction: row-reverse;
-    
+    height: 500px;
     
 }
 .abt {
     text-align: center;
     font-size: 40px;
-    margin: 30px 0;
+    /* margin: 30px 0; */
         font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 .about-image {
     width: 300px;
     margin-left: 100px;
@@ -133,10 +142,10 @@ margin-right: 100px;
 .svc-title {
     text-align: center;
         font-size: 40px;
-        padding-top: 30px;
-        margin: 30px 0;
+        padding: 50px 0;
+        /* margin: 30px 0; */
         font-family: Verdana, Geneva, Tahoma, sans-serif;
-        color: grey;
+        color: rgb(0, 0, 0);
 }
 .box{
     width:220px;
@@ -168,8 +177,32 @@ margin-right: 100px;
     font-weight: 600;
 }
 .service-background{
-    background-image: url('images/background.png'), linear-gradient(45deg, rgb(51, 51, 51), rgb(8,8, 8));
-    height: 100vh;
+    height: 500px;
+    background-image: url('images/background.png'), linear-gradient(45deg, rgb(103, 15, 143), rgb(7, 51, 174));
 }
+
+footer{
+    text-align: center;
+    color: black;
+    padding: 40px 0;
+}
+.footer-container{
+    display: flex;
+    padding: 20px;
+    justify-content: space-around;
+
+}
+.footer-item{
+    list-style: none;
+    text-align: left;
+    padding: 3px;
+}
+.address,.company-footer{
+    text-align: left;
+}
+.footer-container>h1,h2{
+    padding: 5px;
+}
+
 
 
